# hermes-fmsg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  after-install.md  hermes-fmsg-ad.html  plugin.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  compatibility.yml  config.yml
.github/workflows/: test.yml
docs/: LAUNCH.md
plugin/: adapter.py  fmsg_client.py  plugin.yaml
scripts/: check_hermes_contract.py
skills/hermes-fmsg/: SKILL.md
tests/: conftest.py  test_adapter_inbound.py  test_adapter_outbound.py  test_client.py  test_plugin_package.py  test_seed_access_env.py  test_token_manager.py
tests/e2e/: test_against_local_webapi.py
