[project]
name = "hermes-fmsg"
version = "0.2.0"
description = "fmsg messaging platform plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["plugin*"]
exclude = ["img*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
